# skiff

./: CMakeLists.txt  CMakePresets.json  README.md
benchmarks/results/: 2026-07-19-in-memory.md
docs/: DESIGN.md  KERNEL_BYPASS.md  PERFORMANCE.md
include/skiff/: benchmark_protocol.hpp  interfaces.hpp  raft_node.hpp  types.hpp
src/: benchmark_client.cpp  main.cpp  raft_node.cpp
tests/: fakes.hpp  smoke_test.cpp
